Complete Dropbox inntegration and Payment Processing

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,17 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Frontend URL for redirects
+FRONTEND_URL=http://localhost:5173
+
+# Dropbox Configuration
+DROPBOX_CLIENT_ID=your_dropbox_client_id
+DROPBOX_CLIENT_SECRET=your_dropbox_client_secret
+DROPBOX_ACCESS_TOKEN=your_dropbox_access_token
+
+# Square Payment Configuration
+SQUARE_ACCESS_TOKEN=your_square_access_token
+SQUARE_LOCATION_ID=your_square_location_id
+SQUARE_ENVIRONMENT=sandbox
+SQUARE_CURRENCY=USD
